syntax = "proto3";

package payments;

import "google/protobuf/timestamp.proto";

option go_package = "payment-service/internal/infrastructure/msg_broker/proto/gen;gen";

message PaymentProcessedEvent {
string order_id   = 1;
string user_id    = 2;
int64  amount     = 3;

PaymentStatus status = 4;

optional PaymentFailureReason payment_failure_reason = 5;

google.protobuf.Timestamp occurred_at = 6;
}

enum PaymentStatus {
PAYMENT_STATUS_UNSPECIFIED = 0;
PAYMENT_STATUS_SUCCESS     = 1;
PAYMENT_STATUS_FAILED      = 2;
}

enum PaymentFailureReason {
PAYMENT_FAILURE_REASON_UNSPECIFIED = 0;
PAYMENT_FAILURE_REASON_NO_ACCOUNT = 1;
PAYMENT_FAILURE_REASON_INSUFFICIENT_FUNDS = 2;
PAYMENT_FAILURE_REASON_INTERNAL_ERROR = 3;
}
